--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "start": "node serve.js",
-    "test:unit": "jest --"
+    "test:unit": "jest --",
+    "test": "cypress open"
   }
 }
